changes on portfolio page and html

--- a/portfolio.html
+++ b/portfolio.html
@@ -217,6 +217,9 @@
         marketing & growth solutions.
       </p>
     </div>
+    <p class="social-media-footer">
+      Social media
+    </p>
     </footer>
 
   </body>
