--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <h2 class="header-two visually-hidden">Benefits</h2>
         <ul class="benefits-section-list list">
           <li class="benefits-section-item">
+            <svg class="our-benefits-svg">
+              <use href="" width="264" height="112"></use>
+            </svg>
             <h3 class="header-three">Strategy</h3>
             <p class="description">
               Our goal is to identify the business problem to walk away with the
@@ -65,6 +68,9 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <svg class="our-benefits-svg">
+              <use href="" width="264" height="112"></use>
+            </svg>
             <h3 class="header-three">Punctuality</h3>
             <p class="description">
               Bring the key message to the brand's audience for the best price
@@ -72,6 +78,9 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <svg class="our-benefits-svg">
+              <use href="" width="264" height="112"></use>
+            </svg>
             <h3 class="header-three">Diligence</h3>
             <p class="description">
               Research and confirm brands that present the strongest digital
@@ -79,6 +88,9 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <svg class="our-benefits-svg">
+              <use href="" width="264" height="112"></use>
+            </svg>
             <h3 class="header-three">Technologies</h3>
             <p class="description">
               Design practice focused on digital experiences. We bring forth a
@@ -192,6 +204,9 @@
         marketing & growth solutions.
       </p>
     </div>
+    <p class="social-media-footer">
+      Social media
+    </p>
     </footer>
   </body>
 </html>
