--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
         <h2 class="header-two visually-hidden">Benefits</h2>
         <ul class="benefits-section-list list">
           <li class="benefits-section-item">
+            <div class="our-benefits-icon">
             <svg class="our-benefits-svg">
-              <use href="" width="264" height="112"></use>
+              <use href="./images/svg/icons.svg#icon-antenna"></use>
             </svg>
+          </div>
             <h3 class="header-three">Strategy</h3>
             <p class="description">
               Our goal is to identify the business problem to walk away with the
@@ -68,9 +70,11 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <div class="our-benefits-icon">
             <svg class="our-benefits-svg">
-              <use href="" width="264" height="112"></use>
+              <use href="./images/svg/icons.svg#icon-clock"></use>
             </svg>
+          </div>
             <h3 class="header-three">Punctuality</h3>
             <p class="description">
               Bring the key message to the brand's audience for the best price
@@ -78,9 +82,11 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <div class="our-benefits-icon">
             <svg class="our-benefits-svg">
-              <use href="" width="264" height="112"></use>
+              <use href="./images/svg/icons.svg#icon-diagram"></use>
             </svg>
+          </div>
             <h3 class="header-three">Diligence</h3>
             <p class="description">
               Research and confirm brands that present the strongest digital
@@ -88,9 +94,11 @@
             </p>
           </li>
           <li class="benefits-section-item">
+            <div class="our-benefits-icon">
             <svg class="our-benefits-svg">
-              <use href="" width="264" height="112"></use>
+              <use href="./images/svg/icons.svg#icon-astronaut"></use>
             </svg>
+          </div>
             <h3 class="header-three">Technologies</h3>
             <p class="description">
               Design practice focused on digital experiences. We bring forth a
@@ -151,6 +159,36 @@
             <div class="employee-card-content">
             <h3 class="header-three header-three-align">Mark Guerrero</h3>
             <p class="description description-align">Product Designer</p>
+            <ul class="sm-employees-list list">
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="section-employee-list-item">
@@ -163,6 +201,36 @@
             <div class="employee-card-content">
             <h3 class="header-three header-three-align">Tom Ford</h3>
             <p class="description description-align">Frontend Developer</p>
+            <ul class="sm-employees-list list">
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="section-employee-list-item">
@@ -175,6 +243,36 @@
             <div class="employee-card-content">
             <h3 class="header-three header-three-align">Camila Garcia</h3>
             <p class="description description-align">Marketing</p>
+            <ul class="sm-employees-list list">
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           </li>
           <li class="section-employee-list-item">
@@ -187,13 +285,110 @@
             <div class="employee-card-content">
             <h3 class="header-three header-three-align">Daniel Wilson</h3>
             <p class="description description-align">UI Designer</p>
+            <ul class="sm-employees-list list">
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="sm-employees-list-item">
+                <a class="sm-list-link" href="">
+                  <svg class="sm-list-icon">
+                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          </li>
+        </ul>
+      </div>
+      </section>
+
+        <!-- CUSTOMERS -->
+
+      <section class="customers section">
+        <div class="container">
+        <h2 class="header-two header-two-customers-section">Customers</h2>
+        <ul class="customers-list list">
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </div>
+          </li>
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </div>
+          </li>
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </div>
+          </li>
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+            </div>
+          </li>
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+            </div>
+          </li>
+          <li class="customers-list-item">
+            <div class="customer-listlink-icon">
+            <a href="" class="customers-list-link">
+              <svg class="customers-icon">
+                <use href="./images/svg/icons.svg#icon-logo-6"></use>
+              </svg>
+            </a>
           </div>
           </li>
         </ul>
       </div>
       </section>
     </main>
+
+
     <!-- FOOTER  -->
+
     <footer class="footer">
       <div class="container footer-container">
       <a class="link logo-link logo-link-footer" href="./index.html"
