--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <li class="customers-list-item">
             <div class="customer-listlink-icon">
             <a href="" class="customers-list-link">
-              <svg class="customers-icon">
+              <svg class="customers-icon" width="104" height="56">
                 <use href="./images/svg/icons.svg#icon-logo-1"></use>
               </svg>
             </a>
@@ -391,17 +391,48 @@
 
     <footer class="footer">
       <div class="container footer-container">
-      <a class="link logo-link logo-link-footer" href="./index.html"
-        >Web<span class="logo-part-footer">Studio</span></a
-      >
+        <a class="link logo-link logo-link-footer" href="./index.html"
+        >Web<span class="logo-part-footer">Studio</span></a>
       <p class="description description-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    </div>
+    
+    
     <p class="social-media-footer">
       Social media
     </p>
-    </footer>
+    <ul class="sm-footer list">
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+     </footer>
   </body>
 </html>
