--- a/index.html
+++ b/index.html
@@ -391,14 +391,15 @@
 
     <footer class="footer">
       <div class="container footer-container">
+        <div class="block-one-footer">
         <a class="link logo-link logo-link-footer" href="./index.html"
         >Web<span class="logo-part-footer">Studio</span></a>
       <p class="description description-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
-    
-    
+    </div>
+        <div class="block-two-footer">
     <p class="social-media-footer">
       Social media
     </p>
@@ -432,6 +433,7 @@
         </a>
       </li>
     </ul>
+  </div>
   </div>
      </footer>
   </body>
