--- a/portfolio.html
+++ b/portfolio.html
@@ -209,18 +209,51 @@
     <!-- FOOTER  -->
     <footer class="footer">
       <div class="container footer-container">
-      <a class="link logo-link logo-link-footer" href="./index.html"
-        >Web<span class="logo-part-footer">Studio</span></a
-      >
+        <div class="block-one-footer">
+        <a class="link logo-link logo-link-footer" href="./index.html"
+        >Web<span class="logo-part-footer">Studio</span></a>
       <p class="description description-footer">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </div>
+        <div class="block-two-footer">
     <p class="social-media-footer">
       Social media
     </p>
-    </footer>
+    <ul class="sm-footer list">
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-instagram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-twitter"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="sm-footer-item">
+        <a href="" class="sm-footer-link sm-list-link">
+          <svg class="sm-footer-icon sm-list-icon">
+            <use href="/images/svg/icons.svg#icon-linkedin"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+  </div>
+     </footer>
 
   </body>
 </html>
