Final version HW4

--- a/portfolio.html
+++ b/portfolio.html
@@ -224,28 +224,28 @@
     <ul class="sm-footer list">
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon">
+          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
             <use href="/images/svg/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon">
+          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
             <use href="/images/svg/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon">
+          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
             <use href="/images/svg/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon">
+          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
             <use href="/images/svg/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
