--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="benefits-section-list list">
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
-            <svg class="our-benefits-svg" width=64 height=64px>
+            <svg class="our-benefits-svg" width="64" height="64">
               <use href="./images/svg/icons.svg#icon-antenna"></use>
             </svg>
           </div>
@@ -71,7 +71,7 @@
           </li>
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
-            <svg class="our-benefits-svg" width=64 height=64px>
+            <svg class="our-benefits-svg" width="64" height="64">
               <use href="./images/svg/icons.svg#icon-clock"></use>
             </svg>
           </div>
@@ -83,7 +83,7 @@
           </li>
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
-            <svg class="our-benefits-svg" width=64 height=64px>
+            <svg class="our-benefits-svg" width="64" height="64">
               <use href="./images/svg/icons.svg#icon-diagram"></use>
             </svg>
           </div>
@@ -95,7 +95,7 @@
           </li>
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
-            <svg class="our-benefits-svg" width=64 height=64px>
+            <svg class="our-benefits-svg" width="64" height="64">
               <use href="./images/svg/icons.svg#icon-astronaut"></use>
             </svg>
           </div>
@@ -395,34 +395,32 @@
       </p>
     </div>
         <div class="block-two-footer">
-    <p class="social-media-footer">
-      Social media
-    </p>
+    <p class="social-media-footer">Social media</p>
     <ul class="sm-footer list">
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="./images/svg/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="./images/svg/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="./images/svg/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="./images/svg/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
