--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
 
         <ul class="portfolio-services-list list">
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-1/banking-app.jpg"
@@ -82,7 +82,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-1/cashless-payment.jpg"
@@ -97,7 +97,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-1/meditation-app.jpg"
@@ -112,7 +112,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-2/taxi-service.jpg"
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-2/screen-illustrations.jpg"
@@ -142,7 +142,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-2/online-courses.jpg"
@@ -157,7 +157,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-3/instagram-stories.jpg"
@@ -172,7 +172,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-3/organic-food.jpg"
@@ -187,7 +187,7 @@
             </a>
           </li>
           <li class="portfolio-services-list-item">
-            <a class="link" href="">
+            <a class="link portfolio-link" href="">
               <img
                 class="portfolio-image"
                 src="./images/images-portfolio/row-3/fresh-coffee.jpg"
@@ -218,34 +218,32 @@
       </p>
     </div>
         <div class="block-two-footer">
-    <p class="social-media-footer">
-      Social media
-    </p>
+    <p class="social-media-footer">Social media</p>
     <ul class="sm-footer list">
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="/images/svg/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="/images/svg/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="/images/svg/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
-          <svg class="sm-footer-icon sm-list-icon" width="16" height="16">
+          <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
             <use href="/images/svg/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
