--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
             <svg class="our-benefits-svg" width="64" height="64">
-              <use href="./images/svg/icons.svg#icon-antenna"></use>
+              <use href="./images/icons.svg#icon-antenna"></use>
             </svg>
           </div>
             <h3 class="header-three">Strategy</h3>
@@ -72,7 +72,7 @@
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
             <svg class="our-benefits-svg" width="64" height="64">
-              <use href="./images/svg/icons.svg#icon-clock"></use>
+              <use href="./images/icons.svg#icon-clock"></use>
             </svg>
           </div>
             <h3 class="header-three">Punctuality</h3>
@@ -84,7 +84,7 @@
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
             <svg class="our-benefits-svg" width="64" height="64">
-              <use href="./images/svg/icons.svg#icon-diagram"></use>
+              <use href="./images/icons.svg#icon-diagram"></use>
             </svg>
           </div>
             <h3 class="header-three">Diligence</h3>
@@ -96,7 +96,7 @@
           <li class="benefits-section-item">
             <div class="our-benefits-icon">
             <svg class="our-benefits-svg" width="64" height="64">
-              <use href="./images/svg/icons.svg#icon-astronaut"></use>
+              <use href="./images/icons.svg#icon-astronaut"></use>
             </svg>
           </div>
             <h3 class="header-three">Technologies</h3>
@@ -163,28 +163,28 @@
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -205,28 +205,28 @@
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -247,28 +247,28 @@
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -289,28 +289,28 @@
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-instagram"></use>
+                    <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-twitter"></use>
+                    <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-facebook"></use>
+                    <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="sm-employees-list-item">
                 <a class="sm-list-link" href="">
                   <svg class="sm-list-icon" width="16" height="16">
-                    <use href="./images/svg/icons.svg#icon-linkedin"></use>
+                    <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -331,7 +331,7 @@
           <li class="customers-list-item">
               <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-1"></use>
+                <use href="./images/icons.svg#icon-Logo-1"></use>
               </svg>
             </a>
           </li>
@@ -339,7 +339,7 @@
           <li class="customers-list-item">
               <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-2"></use>
+                <use href="./images/icons.svg#icon-Logo-2"></use>
               </svg>
             </a>
           </li>
@@ -347,7 +347,7 @@
           <li class="customers-list-item">
               <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-3"></use>
+                <use href="./images/icons.svg#icon-Logo-3"></use>
               </svg>
             </a>
           </li>
@@ -355,7 +355,7 @@
           <li class="customers-list-item">
             <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-4"></use>
+                <use href="./images/icons.svg#icon-Logo-4"></use>
               </svg>
             </a>
           </li>
@@ -363,7 +363,7 @@
           <li class="customers-list-item">
            <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-5"></use>
+                <use href="./images/icons.svg#icon-Logo-5"></use>
               </svg>
             </a>
           </li>
@@ -371,7 +371,7 @@
           <li class="customers-list-item">
               <a href="" class="customers-list-link">
               <svg class="customers-icon" width="104" height="56">
-                <use href="./images/svg/icons.svg#icon-Logo-6"></use>
+                <use href="./images/icons.svg#icon-Logo-6"></use>
               </svg>
             </a>
              </li>
@@ -400,28 +400,28 @@
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
           <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
-            <use href="./images/svg/icons.svg#icon-instagram"></use>
+            <use href="./images/icons.svg#icon-instagram"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
           <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
-            <use href="./images/svg/icons.svg#icon-twitter"></use>
+            <use href="./images/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
           <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
-            <use href="./images/svg/icons.svg#icon-facebook"></use>
+            <use href="./images/icons.svg#icon-facebook"></use>
           </svg>
         </a>
       </li>
       <li class="sm-footer-item">
         <a href="" class="sm-footer-link sm-list-link">
           <svg class="sm-footer-icon sm-list-icon" width="24" height="24">
-            <use href="./images/svg/icons.svg#icon-linkedin"></use>
+            <use href="./images/icons.svg#icon-linkedin"></use>
           </svg>
         </a>
       </li>
